Fix spacing between icons and file names

--- a/tabshell-dialogs/src/main/resources/com/techsenger/tabshell/dialogs/file/file-dialog.css
+++ b/tabshell-dialogs/src/main/resources/com/techsenger/tabshell/dialogs/file/file-dialog.css
@@ -23,6 +23,6 @@
 }
 
 .column-list-view .column > .cell {
-    -fx-graphic-text-gap: 0.5em;
+    -fx-graphic-text-gap: 0.4em;
 }
 
